@@ -42,6 +42,7 @@
 
 - tpl/info.tpl のタグミスを修正
 - smarty_modifier_plugin が配列の場合に、プラグインとして登録されないバグを修正
+- フォームヘルパでセレクトボックスの配列フォームを作ると値が保持されない点を修正 (ethna-users:0868)
 
 ** 2.3.5
 
